--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "stream": "^0.0.3"
   }
 }
